ngRoute inspections added

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "jshint src/*.js",
     "build:css": "./node_modules/less/bin/lessc src/styles/main.less > src/ng-bar.css",
     "build:js": "browserify -t brfs src/main.js > ng-bar.js",
-    "build": "npm run prebuild:js && npm run build:css && npm run build:js && cp ng-bar.js test/",
+    "build": "npm run prebuild:js && npm run build:css && npm run build:js && cp ng-bar.js examples/",
     "prebuild:js": "npm run lint"
   },
   "author": "Yaraslau Kurmyza <me@yaraslav.com>",
